# VideoPlayer

./: .gitignore  CMakeLists.txt  README.md  demo.pro
src/: AudioRenderer.cpp  AudioRenderer.h  CMediaDialog.cpp  CMediaDialog.h  OpenGLWidget.cpp  OpenGLWidget.h  VideoWaiter.cpp  VideoWaiter.h  audioThread.cpp  audioThread.h  decode.cpp  decode.h  demo.cpp  demo.h  main.cpp  playerCommand.h  videoThread.cpp  videoThread.h
